--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8845f3; }
+  background: #f0760c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8a06c5; }
+  background: #40f5a0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3a9f01; }
+  background: #3676dc; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5ce4d8; }
+  background: #947216; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7ac198; }
+  background: #ea0aad; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ec7ba9; }
+  background: #2a7ade; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #82dbda; }
+  background: #233fe3; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #60bf25; }
+  background: #998f46; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #617be4; }
+  background: #6e2759; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #6d5c21; }
+  background: #5d4151; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #91a3cb; }
+  background: #dc6519; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #989713; }
+  background: #4e5841; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #6ffda1; }
+  background: #5a9bc0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #963f8c; }
+  background: #1b8cd3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #aecf24; }
+  background: #e81fc6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5e2f42; }
+  background: #4d33a8; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1e5ad9; }
+  background: #193dd3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #bf327a; }
+  background: #65266e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8bb24e; }
+  background: #85540a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #cbf5cb; }
+  background: #9e51b4; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #36586a; }
+  background: #62be70; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #da9071; }
+  background: #807429; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #17c01f; }
+  background: #9e1730; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #fa4e25; }
+  background: #9ec183; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #72a2db; }
+  background: #72e12d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #976776; }
+  background: #4f12f9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2da08b; }
+  background: #134552; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2a86ca; }
+  background: #17bdfe; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #221f3d; }
+  background: #2819e1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5c3348; }
+  background: #654442; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d53fcc; }
+  background: #f23706; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #43c1c1; }
+  background: #1e6c34; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #392001; }
+  background: #b3e0d0; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #844f0a; }
+  background: #f94755; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #18d822; }
+  background: #88164d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #81e390; }
+  background: #b436bb; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #913de9; }
+  background: #01c3ae; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9591ea; }
+  background: #eddda9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c9184f; }
+  background: #5d6dd2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #759472; }
+  background: #55965c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a5f11e; }
+  background: #5f8e51; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1f96ab; }
+  background: #1e86b8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8539d5; }
+  background: #26e82b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #03c916; }
+  background: #c665ef; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #650fd4; }
+  background: #8d46b2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2f348e; }
+  background: #9f91aa; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #fcac75; }
+  background: #367464; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f5ba5f; }
+  background: #f28ccf; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #fe0d3b; }
+  background: #c369e8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6591c7; }
+  background: #a7f570; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4499bc; }
+  background: #d515a8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c1a73d; }
+  background: #d11e6f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a4e629; }
+  background: #4f336a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2243c7; }
+  background: #87da82; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #836a89; }
+  background: #19afa8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c1f17a; }
+  background: #3a2ab9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2a4cb8; }
+  background: #f9dfc2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fc1275; }
+  background: #083af0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8ca3be; }
+  background: #ada4fd; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0afce5; }
+  background: #8d852d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #aad605; }
+  background: #3a25f8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f9f9f3; }
+  background: #96c27a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a0b40c; }
+  background: #8de04f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #6b90b2; }
+  background: #a54f62; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2de463; }
+  background: #0dea68; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f09f3b; }
+  background: #165c97; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e7e69b; }
+  background: #3055c7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b4535e; }
+  background: #f19ee8; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0a8857; }
+  background: #3ebb33; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ca1905; }
+  background: #d20939; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #103056; }
+  background: #4a597e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #53b323; }
+  background: #a03d22; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #118c11; }
+  background: #c1cb11; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c41e8d; }
+  background: #5e5ed3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e0705f; }
+  background: #8ccb3a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e866b8; }
+  background: #cdf0f6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #90682a; }
+  background: #7e93d3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2a81dd; }
+  background: #67c4a6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #cd3083; }
+  background: #706045; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b3df8b; }
+  background: #01aed8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7e3d20; }
+  background: #70f365; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #ac96e4; }
+  background: #1f928e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #bbc63d; }
+  background: #05c6ae; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c7bb9a; }
+  background: #9830ca; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #c8aa1b; }
+  background: #f2ddf5; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #77039d; }
+  background: #57b542; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #56e908; }
+  background: #e8cedc; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #22c7b1; }
+  background: #129d4b; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #197ab6; }
+  background: #62fb7b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a9b1e0; }
+  background: #952511; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #69b492; }
+  background: #034676; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #102b47; }
+  background: #a8e44a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #867296; }
+  background: #c5e0d0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ff6d33; }
+  background: #7539d1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a1a0aa; }
+  background: #99c716; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b5b89e; }
+  background: #6932bf; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0ade81; }
+  background: #c209b0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #07f76d; }
+  background: #c90b19; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #504029; }
+  background: #9e9dbb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8f1407; }
+  background: #408c8b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9936,19 +9936,24 @@ table .bold-heading {
   margin-bottom: 12px;
   display: flex;
   position: relative;
-  font-size: 20px;
+  font-size: 18px;
   color: #776fff;
+  padding-top: 10px;
   text-decoration: underline; }
 
 .profile-box {
   display: flex;
   padding: 30px; }
 
+#nav-comments .profile-box {
+  padding-left: 8px; }
+
 .profile-picture {
   margin-right: 10px; }
 
 .comments-text {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+  font-size: 16px; }
 
 .profile-comment-time-stamp-box {
   display: flex; }
@@ -10046,7 +10051,7 @@ table .bold-heading {
   padding-left: 10px; }
 
 .comments-left-scroll {
-  height: 450px;
+  height: 680px;
   overflow-y: scroll; }
 
 @font-face {
@@ -10597,20 +10602,117 @@ input[type="checkbox"] {
   padding-left: 50px !important;
   padding-right: 50px !important; }
 
+.table-borderless thead {
+  background: none;
+  color: #8c8c8c;
+  font-family: 'proxima-semi-bold';
+  border-bottom: 1px solid #dcdde1; }
+
+.table-borderless thead th {
+  padding-bottom: 20px; }
+
+.table-borderless {
+  border: 0px !important;
+  white-space: nowrap;
+  width: 100%; }
+
+.add-tags-left-col {
+  width: 75%; }
+
+.add-tags-container {
+  display: flex;
+  padding: 20px 10px;
+  font-size: 14px; }
+
+.td-bubble {
+  background: #f4f4f4;
+  padding: 12px 20px;
+  display: inline;
+  border-radius: 40px; }
+
+.table th,
+.table td {
+  vertical-align: middle !important; }
+
+.table-icons {
+  height: 18px; }
+
+.icon-td {
+  text-align: center !important; }
+
+.th-icon-div {
+  width: 12% !important;
+  text-align: center; }
+
+.table td .table-icons {
+  text-align: center; }
+
+.add-tags-right-col {
+  flex: 1;
+  margin-left: 60px;
+  margin-top: 20px; }
+
+.tags-field-box input {
+  width: 260px;
+  padding: 14px 10px;
+  border: 1px solid #c2c3c7;
+  margin-bottom: 20px;
+  border-radius: 5px; }
+
+.add-tags-right-col .graydient-primary-btn {
+  padding-left: 30px;
+  padding-right: 30px; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
 
   .total-comments-wraper {
-    padding-top: 50px; }
+    padding-top: 30px; }
+
+  .profile-name {
+    font-size: 16px; }
+
+  .total-comments {
+    margin-bottom: 10px !important; }
+
+  .inner-tab-content-right-col {
+    margin-top: 20px !important; }
+
+  .add-comment-section {
+    margin-top: 15px !important; }
 
   .profile-comment-time-update {
     margin-right: 0px;
-    font-size: 14px;
+    font-size: 12px;
     margin-bottom: 10px; }
 
   .profile-comment-time-stamp-box {
-    flex-direction: column; } }
+    flex-direction: column; }
+
+  .comments-text {
+    font-size: 14px !important; }
+
+  .add-tags-left-col {
+    width: 100%;
+    order: 2;
+    overflow-x: auto; }
+
+  .add-tags-container {
+    display: flex;
+    padding: 20px 10px;
+    flex-direction: column; }
+
+  .add-tags-right-col {
+    flex: 1;
+    margin-left: 0px;
+    margin-bottom: 20px; }
+
+  .tags-field-box {
+    display: flex;
+    flex-direction: column; }
+    .tags-field-box input:first-child {
+      margin-right: 20px; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
