--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f0760c; }
+  background: #232669; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #40f5a0; }
+  background: #32712c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3676dc; }
+  background: #e0aec9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #947216; }
+  background: #e3302a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ea0aad; }
+  background: #7639ca; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2a7ade; }
+  background: #cd4066; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #233fe3; }
+  background: #38d829; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #998f46; }
+  background: #fee9b5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6e2759; }
+  background: #6698f5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5d4151; }
+  background: #4c296d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #dc6519; }
+  background: #d92463; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4e5841; }
+  background: #0d7f18; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5a9bc0; }
+  background: #fc1bef; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1b8cd3; }
+  background: #4eb0b6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e81fc6; }
+  background: #441312; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #4d33a8; }
+  background: #167ed6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #193dd3; }
+  background: #70d76a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #65266e; }
+  background: #d14583; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #85540a; }
+  background: #5ced0d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9e51b4; }
+  background: #378d45; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #62be70; }
+  background: #48eace; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #807429; }
+  background: #db1a23; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9e1730; }
+  background: #c7b75e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9ec183; }
+  background: #adb32e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #72e12d; }
+  background: #6d2251; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4f12f9; }
+  background: #cd3b11; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #134552; }
+  background: #7d7de0; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #17bdfe; }
+  background: #7d1b73; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2819e1; }
+  background: #0b481f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #654442; }
+  background: #c95acd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f23706; }
+  background: #3c1fa1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #1e6c34; }
+  background: #cc7c41; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b3e0d0; }
+  background: #92b70b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f94755; }
+  background: #f66f47; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #88164d; }
+  background: #856bf4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b436bb; }
+  background: #3ddc7e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #01c3ae; }
+  background: #22d485; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #eddda9; }
+  background: #0e678c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5d6dd2; }
+  background: #c44064; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #55965c; }
+  background: #c2e349; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5f8e51; }
+  background: #731ac9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1e86b8; }
+  background: #6008fe; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #26e82b; }
+  background: #5ec013; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c665ef; }
+  background: #966826; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8d46b2; }
+  background: #f5e613; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9f91aa; }
+  background: #c64ac1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #367464; }
+  background: #4d8303; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f28ccf; }
+  background: #5362e1; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c369e8; }
+  background: #294fc1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a7f570; }
+  background: #ac15bf; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d515a8; }
+  background: #08d6c4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d11e6f; }
+  background: #52795a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4f336a; }
+  background: #af1346; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #87da82; }
+  background: #87569d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #19afa8; }
+  background: #f29ed4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3a2ab9; }
+  background: #49017d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f9dfc2; }
+  background: #803f96; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #083af0; }
+  background: #639ea1; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ada4fd; }
+  background: #a38d53; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #8d852d; }
+  background: #1ae741; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3a25f8; }
+  background: #173984; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #96c27a; }
+  background: #f7aa6d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8de04f; }
+  background: #0f6385; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a54f62; }
+  background: #5ac3b2; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0dea68; }
+  background: #947ed4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #165c97; }
+  background: #e05449; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3055c7; }
+  background: #ffe828; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f19ee8; }
+  background: #8c3e76; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3ebb33; }
+  background: #20cc77; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d20939; }
+  background: #143241; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #4a597e; }
+  background: #6fb5a7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #a03d22; }
+  background: #98ca42; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c1cb11; }
+  background: #16871f; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5e5ed3; }
+  background: #0e562e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8ccb3a; }
+  background: #9a6f1b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #cdf0f6; }
+  background: #8657ca; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7e93d3; }
+  background: #375742; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #67c4a6; }
+  background: #660904; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #706045; }
+  background: #d4b620; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #01aed8; }
+  background: #80667c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #70f365; }
+  background: #13e8f2; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1f928e; }
+  background: #c55119; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #05c6ae; }
+  background: #5241d7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9830ca; }
+  background: #f47725; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f2ddf5; }
+  background: #8e647a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #57b542; }
+  background: #769d94; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e8cedc; }
+  background: #75087a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #129d4b; }
+  background: #fd43f0; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #62fb7b; }
+  background: #ff68b3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #952511; }
+  background: #40a3e1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #034676; }
+  background: #58a2c1; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a8e44a; }
+  background: #4de596; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c5e0d0; }
+  background: #445af4; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7539d1; }
+  background: #b7eb83; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #99c716; }
+  background: #ba4468; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6932bf; }
+  background: #5af5f1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c209b0; }
+  background: #dc98d1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c90b19; }
+  background: #61a2e7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9e9dbb; }
+  background: #124f2d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #408c8b; }
+  background: #d3049d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9930,13 +9930,14 @@ table .bold-heading {
   width: 16px; }
 
 .total-comments {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  font-size: 20px; }
 
 .profile-name {
   margin-bottom: 12px;
   display: flex;
   position: relative;
-  font-size: 18px;
+  font-size: 16px;
   color: #776fff;
   padding-top: 10px;
   text-decoration: underline; }
@@ -9953,14 +9954,14 @@ table .bold-heading {
 
 .comments-text {
   margin-bottom: 16px;
-  font-size: 16px; }
+  font-size: 14px; }
 
 .profile-comment-time-stamp-box {
   display: flex; }
 
 .profile-comment-time-update {
   margin-right: 40px;
-  font-size: 14px; }
+  font-size: 12px; }
 
 .textarea-comment {
   width: 100%;
@@ -10663,6 +10664,23 @@ input[type="checkbox"] {
   padding-left: 30px;
   padding-right: 30px; }
 
+.scroll-div {
+  width: 100%; }
+
+.tree-list-div {
+  border: 1px solid #c2c3c7;
+  width: 700px;
+  overflow: auto; }
+
+.tree-list-div .device-tab-right-heading,
+.tree-list-div .device-tab-norman-txt {
+  font-size: 12px !important; }
+
+.tree-list-div .device-tab-detail-box {
+  padding: 0px !important;
+  width: 700px;
+  overflow: auto; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
@@ -10712,7 +10730,12 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: column; }
     .tags-field-box input:first-child {
-      margin-right: 20px; } }
+      margin-right: 20px; }
+
+  .tree-list-div .device-tab-detail-box {
+    padding: 0px !important;
+    overflow-x: scroll;
+    width: 700px; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
