--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -64,6 +64,12 @@
         }
 
     }
+
+    .tree-list-div .device-tab-detail-box {
+        padding: 0px !important;
+        overflow-x: scroll;
+        width: 700px;
+    }
 }
 
 /*767 screen end here*/
