--- a/scss/bootstrap.css
+++ b/scss/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #a6e686; }
+  background: #7224ca; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c8ecc2; }
+  background: #37265b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #55ddf5; }
+  background: #fb51d9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c6eb6e; }
+  background: #65e002; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f857a1; }
+  background: #4b0a3c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d38fd1; }
+  background: #591fda; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f2b710; }
+  background: #cd811a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3f97be; }
+  background: #02f6f7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8bcd55; }
+  background: #a8de18; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b38d7a; }
+  background: #2ddf68; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #202477; }
+  background: #b19418; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0fe74a; }
+  background: #fd82d8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7825f6; }
+  background: #167d27; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b96e60; }
+  background: #081bae; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #047a58; }
+  background: #c577fe; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5c0d1f; }
+  background: #d66678; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8b8eb7; }
+  background: #e96a61; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ee2f07; }
+  background: #5e4119; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f6b37b; }
+  background: #cb7acf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #903f21; }
+  background: #12cf12; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #388f0f; }
+  background: #3c491d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1755dd; }
+  background: #549550; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1ab97f; }
+  background: #5a2759; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1c9672; }
+  background: #08259a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #61cff8; }
+  background: #9c8b3d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1c1872; }
+  background: #444402; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d3b56f; }
+  background: #7901d8; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #cf8a87; }
+  background: #b6f7dd; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4fdf8f; }
+  background: #60d816; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #402069; }
+  background: #0450f6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b470c1; }
+  background: #ccb786; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #70efd6; }
+  background: #4fd648; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #88f39d; }
+  background: #850e18; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #33e393; }
+  background: #8151a2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3a98fa; }
+  background: #cabf5c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #9e360b; }
+  background: #ad0299; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #4fa2c8; }
+  background: #4ca834; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f33904; }
+  background: #bb9b5b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4b01ee; }
+  background: #80b15b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #da9dfe; }
+  background: #0ad820; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #fa979b; }
+  background: #63a9b3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #231d34; }
+  background: #51ed6a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a1a0e4; }
+  background: #e044f9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d944b3; }
+  background: #d02725; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #49952b; }
+  background: #b50a57; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b71ab9; }
+  background: #d54ab2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9da483; }
+  background: #6c37f2; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8079c5; }
+  background: #9189af; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e6942d; }
+  background: #2ea702; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1e8dfb; }
+  background: #e1b240; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7c649d; }
+  background: #ed458f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6f7f45; }
+  background: #933f75; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f13310; }
+  background: #a38038; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8e6dd9; }
+  background: #800a25; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2147ca; }
+  background: #a0b01d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b54f36; }
+  background: #745c95; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #af56dc; }
+  background: #80a8dd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #355cce; }
+  background: #51b7c5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fe5078; }
+  background: #c13ae7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #15816c; }
+  background: #274cc6; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #57b3f3; }
+  background: #3c7817; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #4a1b4e; }
+  background: #4e05d1; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #40bc27; }
+  background: #3a5466; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c54ef6; }
+  background: #ec7f10; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #dea40b; }
+  background: #78ad54; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c8c851; }
+  background: #d01c5e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f68e0c; }
+  background: #a2e757; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #6b3bc5; }
+  background: #bdc332; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #bdf602; }
+  background: #c740e8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5f89f8; }
+  background: #66b0eb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #31f18f; }
+  background: #f3ff75; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #85330a; }
+  background: #3d6fca; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5f9585; }
+  background: #809310; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2e4cc4; }
+  background: #3f986d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #818912; }
+  background: #4fe3ec; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #dcd7c7; }
+  background: #1eae35; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ed387a; }
+  background: #fa4ca8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #49eb54; }
+  background: #0f17a3; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fb9fa5; }
+  background: #6a4c6e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #83c0d6; }
+  background: #0737ef; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #78f7ed; }
+  background: #90a1ff; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #032a8d; }
+  background: #905b1c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5244d3; }
+  background: #80240c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #8f2f16; }
+  background: #f1b429; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #343871; }
+  background: #dccf69; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e1e499; }
+  background: #81a667; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e7860f; }
+  background: #dd221e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #76c3ef; }
+  background: #b4afb7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3893d2; }
+  background: #3955f2; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #3ba483; }
+  background: #07860e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0c3c3f; }
+  background: #b61796; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #13ae96; }
+  background: #c5a4e3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #04c9cf; }
+  background: #d49904; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d59f28; }
+  background: #5f7f2c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a97459; }
+  background: #0a2e53; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e193ab; }
+  background: #95b434; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5b28f0; }
+  background: #e1d817; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #22cc82; }
+  background: #fc2533; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #10e5a8; }
+  background: #ea6209; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e716eb; }
+  background: #3ee77c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9930,28 +9930,38 @@ table .bold-heading {
   width: 16px; }
 
 .total-comments {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  font-size: 20px; }
 
 .profile-name {
   margin-bottom: 12px;
   display: flex;
-  position: relative; }
+  position: relative;
+  font-size: 16px;
+  color: #776fff;
+  padding-top: 10px;
+  text-decoration: underline; }
 
 .profile-box {
   display: flex;
   padding: 30px; }
 
+#nav-comments .profile-box {
+  padding-left: 8px; }
+
 .profile-picture {
   margin-right: 10px; }
 
 .comments-text {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+  font-size: 14px; }
 
 .profile-comment-time-stamp-box {
   display: flex; }
 
 .profile-comment-time-update {
-  margin-right: 40px; }
+  margin-right: 40px;
+  font-size: 12px; }
 
 .textarea-comment {
   width: 100%;
@@ -10038,10 +10048,11 @@ table .bold-heading {
 .profile-name-comment-box {
   display: flex;
   flex-direction: column;
-  flex: 1; }
+  flex: 1;
+  padding-left: 10px; }
 
 .comments-left-scroll {
-  height: 450px;
+  height: 680px;
   overflow-y: scroll; }
 
 @font-face {
@@ -10588,9 +10599,129 @@ input[type="checkbox"] {
 .tabs-sidemenu-accord-container .table-submenu-list li a:hover {
   text-decoration: none !important; }
 
-.talha {
-  display: none; }
+.add-comment-section button {
+  padding-left: 50px !important;
+  padding-right: 50px !important; }
 
+.table-borderless thead {
+  background: none;
+  color: #8c8c8c;
+  font-family: 'proxima-semi-bold';
+  border-bottom: 1px solid #dcdde1; }
+
+.table-borderless thead th {
+  padding-bottom: 20px; }
+
+.table-borderless {
+  border: 0px !important;
+  white-space: nowrap;
+  width: 100%; }
+
+.add-tags-left-col {
+  width: 75%; }
+
+.add-tags-container {
+  display: flex;
+  padding: 20px 10px;
+  font-size: 14px; }
+
+.td-bubble {
+  background: #f4f4f4;
+  padding: 12px 20px;
+  display: inline;
+  border-radius: 40px; }
+
+.table th,
+.table td {
+  vertical-align: middle !important; }
+
+.table-icons {
+  height: 18px; }
+
+.icon-td {
+  text-align: center !important; }
+
+.th-icon-div {
+  width: 12% !important;
+  text-align: center; }
+
+.table td .table-icons {
+  text-align: center; }
+
+.add-tags-right-col {
+  flex: 1;
+  margin-left: 60px;
+  margin-top: 20px; }
+
+.tags-field-box input {
+  width: 260px;
+  padding: 14px 10px;
+  border: 1px solid #c2c3c7;
+  margin-bottom: 20px;
+  border-radius: 5px; }
+
+.add-tags-right-col .graydient-primary-btn {
+  padding-left: 30px;
+  padding-right: 30px; }
+
+.tree-list-div {
+  border: 1px solid #c2c3c7; }
+
+.tree-list-div .device-tab-right-heading,
+.tree-list-div .device-tab-norman-txt {
+  font-size: 12px !important; }
+
+@media screen and (max-width: 767px) {
+  .profile-box {
+    padding: 10px; }
+
+  .total-comments-wraper {
+    padding-top: 30px; }
+
+  .profile-name {
+    font-size: 16px; }
+
+  .total-comments {
+    margin-bottom: 10px !important; }
+
+  .inner-tab-content-right-col {
+    margin-top: 20px !important; }
+
+  .add-comment-section {
+    margin-top: 15px !important; }
+
+  .profile-comment-time-update {
+    margin-right: 0px;
+    font-size: 12px;
+    margin-bottom: 10px; }
+
+  .profile-comment-time-stamp-box {
+    flex-direction: column; }
+
+  .comments-text {
+    font-size: 14px !important; }
+
+  .add-tags-left-col {
+    width: 100%;
+    order: 2;
+    overflow-x: auto; }
+
+  .add-tags-container {
+    display: flex;
+    padding: 20px 10px;
+    flex-direction: column; }
+
+  .add-tags-right-col {
+    flex: 1;
+    margin-left: 0px;
+    margin-bottom: 20px; }
+
+  .tags-field-box {
+    display: flex;
+    flex-direction: column; }
+    .tags-field-box input:first-child {
+      margin-right: 20px; } }
+/*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
     height: 130px; }
