padding issue fixed for tree div

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #232669; }
+  background: #793d54; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #32712c; }
+  background: #3e1d8b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e0aec9; }
+  background: #ee65bb; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e3302a; }
+  background: #f960dd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7639ca; }
+  background: #44b717; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cd4066; }
+  background: #0e7199; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #38d829; }
+  background: #30c3ea; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #fee9b5; }
+  background: #22b3ab; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6698f5; }
+  background: #94693d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #4c296d; }
+  background: #3c6a64; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d92463; }
+  background: #d24c27; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0d7f18; }
+  background: #603c38; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #fc1bef; }
+  background: #63b2cc; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4eb0b6; }
+  background: #539350; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #441312; }
+  background: #27bbaf; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #167ed6; }
+  background: #614860; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #70d76a; }
+  background: #947f1e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d14583; }
+  background: #2ccad9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #5ced0d; }
+  background: #30b8b0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #378d45; }
+  background: #1c9bb3; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #48eace; }
+  background: #5837d7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #db1a23; }
+  background: #76e944; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c7b75e; }
+  background: #81375d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #adb32e; }
+  background: #638e4f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6d2251; }
+  background: #37e0d0; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #cd3b11; }
+  background: #f367e2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7d7de0; }
+  background: #5c9dfa; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7d1b73; }
+  background: #d2047a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #0b481f; }
+  background: #da93d5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c95acd; }
+  background: #656970; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #3c1fa1; }
+  background: #d52033; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #cc7c41; }
+  background: #ff0caf; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #92b70b; }
+  background: #c3a8d9; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f66f47; }
+  background: #a2bfbb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #856bf4; }
+  background: #9b13ad; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #3ddc7e; }
+  background: #068309; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #22d485; }
+  background: #bea6ae; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0e678c; }
+  background: #fbbd4a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c44064; }
+  background: #5c8634; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c2e349; }
+  background: #fc1ad4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #731ac9; }
+  background: #a6303f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6008fe; }
+  background: #311466; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5ec013; }
+  background: #98d3b7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #966826; }
+  background: #15d62e; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f5e613; }
+  background: #20b2fe; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #c64ac1; }
+  background: #973de5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #4d8303; }
+  background: #7d15cb; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5362e1; }
+  background: #16f0f8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #294fc1; }
+  background: #cc3b78; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ac15bf; }
+  background: #8fd93c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #08d6c4; }
+  background: #703b63; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #52795a; }
+  background: #b0e8a9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #af1346; }
+  background: #2b5b47; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #87569d; }
+  background: #f0eaec; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f29ed4; }
+  background: #43d47c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #49017d; }
+  background: #041d1f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #803f96; }
+  background: #2dd653; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #639ea1; }
+  background: #9e476c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a38d53; }
+  background: #ae8e19; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1ae741; }
+  background: #d5c562; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #173984; }
+  background: #c8c4e7; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f7aa6d; }
+  background: #ce6c8f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #0f6385; }
+  background: #58f2ea; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5ac3b2; }
+  background: #90ce4a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #947ed4; }
+  background: #7e96c4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e05449; }
+  background: #762def; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ffe828; }
+  background: #c526e0; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8c3e76; }
+  background: #776bf3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #20cc77; }
+  background: #66e7a4; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #143241; }
+  background: #61702e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6fb5a7; }
+  background: #9f6355; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #98ca42; }
+  background: #2eb4ba; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #16871f; }
+  background: #a87e4f; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #0e562e; }
+  background: #6fe25b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #9a6f1b; }
+  background: #129b0f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #8657ca; }
+  background: #65b206; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #375742; }
+  background: #20319f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #660904; }
+  background: #5375dc; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d4b620; }
+  background: #7a4640; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #80667c; }
+  background: #e79856; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #13e8f2; }
+  background: #61db18; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c55119; }
+  background: #4fc963; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5241d7; }
+  background: #873502; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f47725; }
+  background: #74ae4d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8e647a; }
+  background: #f0356b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #769d94; }
+  background: #663de0; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #75087a; }
+  background: #4a7550; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #fd43f0; }
+  background: #d78212; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ff68b3; }
+  background: #0a1dac; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #40a3e1; }
+  background: #97a0e9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #58a2c1; }
+  background: #1923ca; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #4de596; }
+  background: #b4a5f5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #445af4; }
+  background: #e43512; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b7eb83; }
+  background: #772597; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ba4468; }
+  background: #49a47e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5af5f1; }
+  background: #780e0c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #dc98d1; }
+  background: #c502b9; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #61a2e7; }
+  background: #37eaf4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #124f2d; }
+  background: #4e1475; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d3049d; }
+  background: #ebabe0; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10665,10 +10665,11 @@ input[type="checkbox"] {
   padding-right: 30px; }
 
 .scroll-div {
-  width: 100%; }
+  width: 95%; }
 
 .tree-list-div {
   border: 1px solid #c2c3c7;
+  margin: 0px 20px;
   width: 700px;
   overflow: auto; }
 
