--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -134,11 +134,12 @@
 }
 
 .scroll-div {
-    width: 100%;
+    width: 95%;
 }
 
 .tree-list-div {
     border: 1px solid #c2c3c7;
+    margin: 0px 20px;
     width: 700px;
     overflow: auto;
 }
